<resources>
    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>

    <string name="app_name">Navigation View</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="Berita">Berita</string>
    <string name="inbox_string">Inbox</string>
    <string name="jadwal">Jadwal</string>
    <string name="kritik">Kritik dan Saran</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="keluar">keluar</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="cari">Cari</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="album_name">Lab</string>
</resources>
